--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -109,3 +109,15 @@ rules:
   - get
   - patch
   - update
+- apiGroups: 
+  - ""
+  resources:
+  - nodes
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
