--- a/task/alter-label-npu.yaml
+++ b/task/alter-label-npu.yaml
@@ -6,10 +6,10 @@ metadata:
 spec:
     desc: use task `alter-label-npu` to label host alert for gpu
     crontab: "2 * * * *"
-    typeRef: Cluster
+    TypeRef: cluster
     nodeName: anymaster
     steps:
-        - name: alert-label-npu
+        - name: auto-label
           content: |
               hosts=$(kubectl -n ops-system get hosts | grep Huawei | awk '{print $1}')
 
