--- a/task/alert-gpu-drop.yaml
+++ b/task/alert-gpu-drop.yaml
@@ -80,7 +80,7 @@ spec:
                       error_message += build_error_message('gpu count mismatch: %d (desired %d)' % (card_count, desired_card_count))
                       raise Exception(error_message)
               except Exception as e:
-                  error_message = str(e)
+                  error_message += build_error_message(str(e))
               finally:
                   if len(error_message) > 0:
                       error_message = f'节点: {hostname} \n{error_message}异常判断: {reason}\n'
