--- a/task/alert-npu-drop.yaml
+++ b/task/alert-npu-drop.yaml
@@ -78,7 +78,7 @@ spec:
                       error_message = build_error_message('npu count mismatch: %d (desired %d)' % (card_count, desired_card_count))
                       raise Exception(error_message)
               except Exception as e:
-                  error_message = str(e)
+                  error_message += build_error_message(str(e))
               finally:
                   if len(error_message) > 0:
                       print(error_message)
