--- a/task/auto-create-host.yaml
+++ b/task/auto-create-host.yaml
@@ -12,4 +12,4 @@ spec:
         - name: create host
           content: |
               kubectl get nodes -o wide > /tmp/ops-hosts
-              opscli create host -i /tmp/ops-hosts --secretref host-secret
+              /usr/local/bin/opscli create host -i /tmp/ops-hosts --secretref host-secret
