--- a/task/alert-label-npu.yaml
+++ b/task/alert-label-npu.yaml
@@ -14,7 +14,7 @@ spec:
               hosts=$(kubectl -n ops-system get hosts | grep Huawei | awk '{print $1}')
 
               for host in $hosts; do
-                  hostname=$(kubectl -n ops-system get hosts $host | awk '{print $2}')
+                  hostname=$(kubectl -n ops-system get hosts $host | awk 'NR>1 {print $2}')
                   node_status=$(kubectl get node $hostname)
                   if echo "$node_status" | grep -q "SchedulingDisabled"; then
                       kubectl -n ops-system label host $host alert-npu-drop=disabled --overwrite
