--- a/task/alert-gpu-zombie.yaml
+++ b/task/alert-gpu-zombie.yaml
@@ -10,6 +10,7 @@ spec:
         alert-gpu-zombie: enabled
     typeRef: host
     variables:
+        cluster: "default"
         notifaction: "https://xz.wps.cn/api/v1/webhook/send?key="
     steps:
         - name: alert-gpu-zombie
@@ -21,6 +22,7 @@ spec:
               import json
               from datetime import datetime
 
+              cluster = '${cluster}'
               hostname = '${hostname}'
               notifaction = '${notifaction}'
               error_message = ''
@@ -62,5 +64,5 @@ spec:
                   error_message += build_error_message(str(e))
               finally:
                   if len(error_message) > 0:
-                      error_message = f'节点: {hostname} \n{error_message}异常判断: {reason}\n'
+                      error_message = f'集群: {cluster} \n节点: {hostname} \n{error_message}异常判断: {reason}\n'
                       send(error_message)
