--- a/task/add-sshkey.yaml
+++ b/task/add-sshkey.yaml
@@ -6,7 +6,8 @@ metadata:
 spec:
   desc: use task `add-sshkey` to add ssh key to specified host
   variables:
-    key_content:
+    keycontent:
+    keypath: ~/.ssh/authorized_keys
   steps:
-    - name: Add Key to ~/.ssh/authorized_keys
-      content: echo "${key_content}" >> ~/.ssh/authorized_keys
+    - name: Add Key to ${keypath}
+      content: echo "${keycontent}" >> ${keypath}
