--- a/task/list-error-events-bypod.yaml
+++ b/task/list-error-events-bypod.yaml
@@ -11,4 +11,4 @@ spec:
     podname: ""
   steps:
     - name: list pod events
-      content: kubectl get pod --all-namespaces | grep ${podname} | awk '{print $1}' | xargs -L1 kubectl get events -n | grep ${podname} | grep -i 'wan\|err' | awk '{$1=$2=$3=$4=""; print $0}' | head -n ${topk}
+      content: kubectl get pod --all-namespaces | grep ${podname} | awk '{print $1}' | xargs -L1 kubectl get events -n | grep ${podname} | grep -i 'warn\|err' | awk '{$1=$2=$3=$4=""; print $0}' | head -n ${topk}
