--- a/task/clear-disk.yaml
+++ b/task/clear-disk.yaml
@@ -10,18 +10,18 @@ spec:
       content: |
         timeout 5 df -H | grep -vE '^Filesystem|tmpfs|cdrom|loop|udev' | awk '{ print $5 "/" $2 " " $1 }' |grep " "/
     - name: clear image
-      content: nerdctl --namespace k8s.io image prune -f || docker image prune -a -f || true
+      content: nerdctl --namespace k8s.io image prune -f 2>/dev/null || docker image prune -a -f 2>/dev/null || true
     - name: clear container
-      content: nerdctl --namespace k8s.io container prune -f || docker container prune -a -f || true
+      content: nerdctl --namespace k8s.io container prune -f 2>/dev/null || docker container prune -a -f 2>/dev/null || true
     - name: clear network
-      content: nerdctl --namespace k8s.io network prune -f || docker network prune -a -f || true
+      content: nerdctl --namespace k8s.io network prune -f 2>/dev/null || docker network prune -a -f 2>/dev/null || true
     - name: clear volume
-      content: nerdctl --namespace k8s.io volume prune -f || docker volume prune -a -f || true
+      content: nerdctl --namespace k8s.io volume prune -f 2>/dev/null || docker volume prune -a -f 2>/dev/null || true
     - name: clear > 100M log
-      content: find /var/log -type f -name "*.log" -size +100M -exec rm -f {} \; || true
-    - name: clear jfs cache data
+      content: find /var/log -type f -name "*.log" -size +100M -exec rm -f {} \; 2>/dev/null || true
+    - name: clear jfs cache
       content: |
-        find /data/jfs/cache2/mem -maxdepth 1 -type d -mtime +30 -exec rm -rf {} + || true
+        find /data/jfs/cache2/mem -maxdepth 1 -type d -mtime +30 -exec rm -rf {} + 2>/dev/null || true
     - name: after clear
       content: |
         timeout 5 df -H | grep -vE '^Filesystem|tmpfs|cdrom|loop|udev' | awk '{ print $5 "/" $2 " " $1 }' |grep " "/
