--- a/charts/ops/crds/crd.chenshaowen.com_hosts.yaml
+++ b/charts/ops/crds/crd.chenshaowen.com_hosts.yaml
@@ -28,6 +28,9 @@ spec:
     - jsonPath: .status.diskTotal
       name: Disk
       type: string
+    - jsonPath: .status.diskUsagePercent
+      name: DiskUsage
+      type: string
     - jsonPath: .status.acceleratorVendor
       name: Vendor
       type: string
