--- a/task/alert-gpu-zombie.yaml
+++ b/task/alert-gpu-zombie.yaml
@@ -68,7 +68,8 @@ spec:
                           error_message += build_error_message('有僵尸进程占用显卡 ' + num + 'MB')
                   
               except Exception as e:
-                  error_message += build_error_message(str(e))
+                  if len(error_message) == 0:
+                      error_message = build_error_message(str(e))
               finally:
                   if len(error_message) > 0:
                       error_message = f'集群: {cluster} \n节点: {hostname} \n{error_message}异常判断: {reason}\n'
